# atlas

./: # SNOWBROS ATLAS - CONTEXT.md  .gitignore  .release-tag  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FINAL_RELEASE_CHECKLIST.md  LICENSE-APACHE  LICENSE-MIT  PRE_RELEASE_REPORT.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSIONING.md  cliff.toml  deny.toml  dist-workspace.toml  implementation_plan.md  rust-toolchain.toml  snowbros.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: announcements.md  ideas.md  showcases.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml  vscode-release.yml  vscode.yml
assets/: sample-report.html
crates/snowbros_architecture/: Cargo.toml
crates/snowbros_architecture/src/: lib.rs
crates/snowbros_cache/: Cargo.toml
crates/snowbros_cache/src/: fingerprint.rs  lib.rs  store.rs
crates/snowbros_cli/: Cargo.toml
crates/snowbros_cli/benches/: pipeline.rs
crates/snowbros_cli/src/: fixers.rs  lib.rs  main.rs  pipeline.rs
crates/snowbros_cli/src/commands/: analyze.rs  explain.rs  fix.rs  graph.rs  init.rs  mod.rs  model.rs  watch.rs
crates/snowbros_cli/tests/: cli.rs
crates/snowbros_core/: Cargo.toml
crates/snowbros_core/src/: config.rs  diagnostic.rs  error.rs  lib.rs  project.rs  severity.rs  span.rs
crates/snowbros_deps/: Cargo.toml
crates/snowbros_deps/src/: lib.rs
crates/snowbros_engine/: Cargo.toml
crates/snowbros_engine/src/: lib.rs  pipeline.rs
crates/snowbros_engine/tests/: analyze.rs  m0_integration.rs  m1_react.rs
crates/snowbros_framework/: Cargo.toml
crates/snowbros_framework/src/: detect.rs  facts.rs  framework.rs  lib.rs
crates/snowbros_framework/src/nextjs/: components.rs  detector.rs  metadata.rs  mod.rs  routes.rs
crates/snowbros_graph/: Cargo.toml
crates/snowbros_graph/src/: graph.rs  lib.rs  model.rs
crates/snowbros_ir/: Cargo.toml
crates/snowbros_ir/src/: id.rs  lib.rs  node.rs
crates/snowbros_lsp/: Cargo.toml
crates/snowbros_lsp/src/: lib.rs
crates/snowbros_output/: Cargo.toml
crates/snowbros_output/src/: html.rs  json.rs  lib.rs  markdown.rs  report.rs  sarif.rs  scoring.rs
crates/snowbros_parser/: Cargo.toml
crates/snowbros_parser/src/: facts.rs  frontend.rs  imports.rs  language.rs  lib.rs  lowering.rs  python.rs  treesitter.rs
crates/snowbros_performance/: Cargo.toml
crates/snowbros_performance/src/: lib.rs
crates/snowbros_plugin/: Cargo.toml
crates/snowbros_plugin/src/: lib.rs
crates/snowbros_resolver/: Cargo.toml
crates/snowbros_resolver/src/: fileset.rs  jsonc.rs  lib.rs  python.rs  tsconfig.rs
crates/snowbros_rules/: Cargo.toml
crates/snowbros_rules/rules/architecture/: no-circular-imports.toml  unused-export.toml
crates/snowbros_rules/rules/complexity/: large-function.toml
crates/snowbros_rules/rules/dependencies/: unused-dependency.toml
crates/snowbros_rules/rules/imports/: broken-path-alias.toml
crates/snowbros_rules/rules/nextjs/: client-metadata-ignored.toml  mixed-router.toml
crates/snowbros_rules/rules/performance/: forced-dynamic.toml
crates/snowbros_rules/rules/react/: async-client-component.toml  component-naming.toml  hook-in-non-component.toml  hook-returns-jsx.toml
crates/snowbros_rules/rules/typescript/: circular-type-reference.toml  duplicate-declaration.toml  unreachable-symbol.toml  unused-export.toml
crates/snowbros_rules/src/: context.rs  filter.rs  lib.rs  metadata.rs  registry.rs  requirements.rs
crates/snowbros_rules/src/rules/: boundary.rs  circular.rs  complexity.rs  dead_files.rs  forced_dynamic.rs  hardcoded_secret.rs  mod.rs  nextjs.rs  no_eval.rs  react.rs  typescript.rs  unresolved.rs  unused_deps.rs  unused_env.rs  unused_export.rs
crates/snowbros_scanner/: Cargo.toml
crates/snowbros_scanner/src/: lib.rs
crates/snowbros_security/: Cargo.toml
crates/snowbros_security/src/: lib.rs
crates/snowbros_semantic/: Cargo.toml
crates/snowbros_semantic/src/: lib.rs  model.rs  react.rs
docs/: EXAMPLES.md  FAQ.md  INSTALL.md  PRESS_KIT.md  adding-a-rule.md
docs/internal/: FINAL_RELEASE_CHECKLIST.md  RELEASE_CHECKLIST.md
docs/internal/launch/: ANNOUNCE_v0.4.0.md  LAUNCH_POSTS.md
docs/internal/reviews/: ATLAS_AUDIT.md  ATLAS_AUDIT_REVIEW.md  ATLAS_PROJECT_REVIEW.md
docs/launch/: DEMO_PLAN.md  HOMEBREW_SETUP.md  LAUNCH_ASSETS.md  LAUNCH_RISKS.md  MARKETING.md  NAMING.md  POST_LAUNCH_ROADMAP.md  RELEASE_NOTES_v0.1.0.md  SOCIAL_PREVIEW_SPEC.md
docs/rfcs/: 0001-atlas-v0.2-react-nextjs.md  0002-atlas-multi-language-semantic-platform.md  README.md
npm/: README.md  package.json
npm-unscoped/: README.md  package.json
npm/lib/: install.js  platform.js  run.js
npm/test/: wrapper.test.js
rules/architecture/: dead-file.toml  private-env-in-client.toml  server-only-in-client.toml
rules/environment/: unused-env-var.toml
rules/imports/: unresolved-import.toml
rules/security/: hardcoded-secret.toml  no-eval.toml
vscode/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  README.md  esbuild.js  package-lock.json  package.json  snowbros-atlas.vsix  tsconfig.json
vscode/media/: README.md
vscode/src/: cli.ts  client.ts  commands.ts  config.ts  extension.ts  logger.ts  resolve.ts  statusBar.ts
vscode/test/: runTest.ts
vscode/test/suite/: extension.test.ts  index.ts
website/: benchmarks.html  contributing.html  documentation.html  features.html  index.html  installation.html  roadmap.html  rules.html  style.css
website/atlas/: index.html
