[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snowbros/snowbros-inspector"
authors = ["SNOWBROS Inspector Contributors"]
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
snowbros_core = { path = "crates/snowbros_core" }
snowbros_parser = { path = "crates/snowbros_parser" }
snowbros_framework = { path = "crates/snowbros_framework" }
snowbros_scanner = { path = "crates/snowbros_scanner" }
snowbros_resolver = { path = "crates/snowbros_resolver" }
snowbros_graph = { path = "crates/snowbros_graph" }
snowbros_cache = { path = "crates/snowbros_cache" }
snowbros_rules = { path = "crates/snowbros_rules" }
snowbros_security = { path = "crates/snowbros_security" }
snowbros_deps = { path = "crates/snowbros_deps" }
snowbros_architecture = { path = "crates/snowbros_architecture" }
snowbros_performance = { path = "crates/snowbros_performance" }
snowbros_plugin = { path = "crates/snowbros_plugin" }
snowbros_lsp = { path = "crates/snowbros_lsp" }
snowbros_output = { path = "crates/snowbros_output" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
petgraph = "0.8"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = "8"
notify-debouncer-mini = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
