[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snowbros-labs/atlas"
authors = ["Snowbros Atlas Contributors"]
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
snowbros_core = { path = "crates/snowbros_core", version = "0.1.1" }
snowbros_ir = { path = "crates/snowbros_ir", version = "0.1.1" }
snowbros_semantic = { path = "crates/snowbros_semantic", version = "0.1.1" }
snowbros_parser = { path = "crates/snowbros_parser", version = "0.1.1" }
snowbros_framework = { path = "crates/snowbros_framework", version = "0.1.1" }
snowbros_scanner = { path = "crates/snowbros_scanner", version = "0.1.1" }
snowbros_resolver = { path = "crates/snowbros_resolver", version = "0.1.1" }
snowbros_graph = { path = "crates/snowbros_graph", version = "0.1.1" }
snowbros_cache = { path = "crates/snowbros_cache", version = "0.1.1" }
snowbros_rules = { path = "crates/snowbros_rules", version = "0.1.1" }
snowbros_security = { path = "crates/snowbros_security", version = "0.1.1" }
snowbros_deps = { path = "crates/snowbros_deps", version = "0.1.1" }
snowbros_architecture = { path = "crates/snowbros_architecture", version = "0.1.1" }
snowbros_performance = { path = "crates/snowbros_performance", version = "0.1.1" }
snowbros_plugin = { path = "crates/snowbros_plugin", version = "0.1.1" }
snowbros_lsp = { path = "crates/snowbros_lsp", version = "0.1.1" }
snowbros_engine = { path = "crates/snowbros_engine", version = "0.1.1" }
snowbros_output = { path = "crates/snowbros_output", version = "0.1.1" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
petgraph = "0.8"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = "8"
notify-debouncer-mini = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
