[package]
name = "snowbros_architecture"
description = "Architecture analysis: boundaries, layers, coupling, dead code."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }

[lints]
workspace = true
