[package]
name = "snowbros_cli"
description = "SNOWBROS Inspector command-line interface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "snowbros_cli"
path = "src/lib.rs"

[[bin]]
name = "snowbros"
path = "src/main.rs"

[[bin]]
name = "sb"
path = "src/bin/sb.rs"

[dependencies]
snowbros_core = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
