[package]
name = "snowbros_cli"
description = "SNOWBROS Inspector command-line interface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "snowbros_cli"
path = "src/lib.rs"

[[bin]]
name = "snowbros"
path = "src/main.rs"

[[bin]]
name = "sb"
path = "src/bin/sb.rs"

[dependencies]
snowbros_core = { workspace = true }
snowbros_scanner = { workspace = true }
snowbros_parser = { workspace = true }
snowbros_resolver = { workspace = true }
snowbros_graph = { workspace = true }
snowbros_framework = { workspace = true }
snowbros_output = { workspace = true }
snowbros_rules = { workspace = true }
snowbros_cache = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify-debouncer-mini = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
camino = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"
serde_json = { workspace = true }

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
