[package]
name = "snowbros"
description = "Deterministic engineering intelligence for JavaScript/TypeScript codebases."
homepage = "https://github.com/snowbros/snowbros-inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "snowbros_cli"
path = "src/lib.rs"

[[bin]]
name = "snowbros"
path = "src/main.rs"

[[bin]]
name = "sb"
path = "src/bin/sb.rs"

[dependencies]
snowbros_core = { workspace = true }
snowbros_engine = { workspace = true }
snowbros_lsp = { workspace = true }
snowbros_output = { workspace = true }
snowbros_rules = { workspace = true }
tracing-subscriber = { workspace = true }
notify-debouncer-mini = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"
serde_json = { workspace = true }

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
