[package]
name = "snowbros_core"
description = "Core types shared by every SNOWBROS Inspector subsystem: diagnostics, severity, confidence, spans, configuration, project model."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }

[lints]
workspace = true
