[package]
name = "snowbros_deps"
description = "Dependency analysis: lockfiles, circular deps, unused deps."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }

[lints]
workspace = true
