[package]
name = "snowbros_framework"
description = "Automatic framework detection from manifests, config files, and folder structure."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }

[lints]
workspace = true
