[package]
name = "snowbros_graph"
description = "Semantic graph engine (petgraph-based)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
camino = { workspace = true }

[lints]
workspace = true
