[package]
name = "snowbros_plugin"
description = "Plugin system: WASM (Extism/Wasmtime) and native plugin hosts."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }

[lints]
workspace = true
