[package]
name = "snowbros_rules"
description = "Rule engine: registry, pattern matching, execution, auto-fix."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }
snowbros_graph = { workspace = true }
snowbros_framework = { workspace = true }
snowbros_parser = { workspace = true }
camino = { workspace = true }

[lints]
workspace = true
