[package]
name = "snowbros_scanner"
description = "Project file scanner: gitignore-aware walking and language tagging."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }
snowbros_parser = { workspace = true }
serde = { workspace = true }
camino = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
