[package]
name = "snowbros_security"
description = "Security analysis: taint tracking, vulnerability DB, secrets."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
snowbros_core = { workspace = true }

[lints]
workspace = true
